5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1692_1880.log
== TEST (2019-04-23 23:37:21) 
-- CODE:
y=200%0
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=200%0
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:38:53) 
-- CODE:
y=200%0
x=200%1
z=200%2
a=200%3
b=200%4
c=200%5
d=200%6

print(y)
print(x)
print(z)
print(a)
print(b)
print(c)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=200%0
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:39:35) 
-- CODE:
y=200%0
x=200%1
z=200%2
a=200%3
b=200%4
c=200%5
d=200%6

print(y)
print(x)
print(z)
print(a)
print(b)
print(c)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=200%0
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:39:54) 
-- CODE:

x=200%1
z=200%2
a=200%3
b=200%4
c=200%5
d=200%6

print(y)
print(x)
print(z)
print(a)
print(b)
print(c)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:40:07) 
-- CODE:

x=200%1
z=200%2
a=200%3
b=200%4
c=200%5
d=200%6

print(x)
print(z)
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
0
0
2
0
0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:09:52) 
-- CODE:
x=int(input("Digite um numero :"))
if(x<1)or(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
   print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 01:10:00) 
-- CODE:
x=int(input("Digite um numero :"))
if(x<1)or(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
   print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
-- EXECUTION TIME:
0.148193
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:22:51) 
-- CODE:
x=int(input("Digite um numero :"))
if(x<1)or(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
   print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
-- EXECUTION TIME:
0.196254
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
